--- a/apps/demo/src/App.scss
+++ b/apps/demo/src/App.scss
@@ -33,6 +33,21 @@
     flex-wrap: wrap;
   }
 
+  &__switches,
+  &__checkboxes {
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+
+    &__item {
+      display: flex;
+      align-items: center;
+      gap: 0.75rem;
+    }
+  }
+
   &__button-sizes {
     display: flex;
     gap: 1rem;
@@ -43,12 +58,17 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin-top: 2rem;
   }
 
   &__form-item {
     display: flex;
     align-items: center;
     gap: 0.5rem;
+
+    &--baseline {
+      align-items: baseline;
+    }
   }
 
   &__avatars {
