(feature) Tabs Component (#18)
* Components, Provide Tabs Component

* Components, Provide Tabs Component Styles

* Components, Provide Tabs Component Usage

* Components, Provide Tabs Component Usage

* Components, Provide Tabs Component Usage DefaultValue

* Components, Provide Tabs Final View

* Components, Provide mdk to mining-sdk change

* Components, Provide Content Color removal

* Components, Provide Content Color

--- a/packages/core/src/components/accordion/styles.scss
+++ b/packages/core/src/components/accordion/styles.scss
@@ -2,7 +2,7 @@
  * Accordion Component Styles
  */
 
-.mdk-accordion {
+.mining-sdk-accordion {
   &__item {
     border-bottom: 1px solid hsl(var(--border));
   }
