Fix switch component displaying in demo page (#21)
* Fix switch component displaying in demo page

* remove unused class

--- a/apps/demo/src/App.scss
+++ b/apps/demo/src/App.scss
@@ -71,7 +71,8 @@
   &__form-item {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 3rem;
+    flex-wrap: wrap;
 
     &--baseline {
       align-items: baseline;
