Feat: Dialog Component (#23)
* primary dialog design

* fix close btn position

* update pnpm lock

* add props to prevent closing of dialog

* close icon on controlled dialog

* refactor css colors

* update colors to dark scheme

* update formatting

* refactor onClose type

* remove unnecessary use of classnames

* export icons from the sdk and add them to the demo

* fix onEscapeKeyDown handler

--- a/packages/core/src/components/button/styles.scss
+++ b/packages/core/src/components/button/styles.scss
@@ -34,7 +34,8 @@
     color: var(--mining-sdk-button-primary-text);
 
     &:hover {
-      background: linear-gradient(
+      background:
+        linear-gradient(
           0deg,
           var(--mining-sdk-button-primary-bg-hover-overlay) 0%,
           var(--mining-sdk-button-primary-bg-hover-overlay) 100%
