--- a/apps/demo/src/App.scss
+++ b/apps/demo/src/App.scss
@@ -33,11 +33,18 @@
     flex-wrap: wrap;
   }
 
-  &__button-grid {
+  &__button-grid,
+  &__dialog-grid {
     display: grid;
     grid-template-columns: repeat(4, minmax(140px, max-content));
     gap: 1rem;
     align-items: center;
+  }
+
+  &__icons-grid {
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
   }
 
   &__switches,
