--- a/packages/core/src/components/dialog/styles.scss
+++ b/packages/core/src/components/dialog/styles.scss
@@ -29,14 +29,10 @@
     translate: -50% -50%;
     gap: 1rem;
     border: 1px solid hsl(var(--border));
-    background: hsl(var(--background));
+    background: var(--mining-sdk-color-surface);
     padding: 1.5rem;
-    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1);
-    duration: 200ms;
-
-    @media (min-width: 640px) {
-      border-radius: var(--radius);
-    }
+    box-shadow: 0 10px 15px -3px var(--mining-sdk-dialog-box-shadow-color);
+    animation-duration: 200ms;
 
     &[data-state='open'] {
       animation: dialogIn 200ms ease-out;
@@ -49,9 +45,25 @@
 
   &__header {
     display: flex;
-    flex-direction: column;
-    gap: 0.375rem;
-    text-align: center;
+    align-items: flex-start;
+    justify-content: space-between;
+    position: relative;
+
+    padding-bottom: 28px;
+    border-bottom: 1px solid var(--mining-sdk-dialog-border-color);
+
+    &__container {
+      display: flex;
+      flex-direction: column;
+      gap: 0.375rem;
+    }
+
+    &__close {
+      position: relative;
+      right: -1rem;
+      top: -0.75rem;
+      border: 0;
+    }
 
     @media (min-width: 640px) {
       text-align: left;
@@ -61,6 +73,8 @@
   &__footer {
     display: flex;
     flex-direction: column-reverse;
+    padding-top: 24px;
+    border-top: 1px solid var(--mining-sdk-dialog-border-color);
 
     @media (min-width: 640px) {
       flex-direction: row;
