(ui) migrate tag and  indicator components (#32)
* (ui) migrate Tag and Indicator component

* fix indicators styles

* update pnpm-lock.yaml file

* update pnpm-lock.yaml file

* update pnpm-lock.yaml file

* update pnpm-lock.yaml file

* rvert pnpm-lock file changes

* ignore prettier changes for pnpm-lock.yaml file

* fix --mining-sdk-color-error var use

* Fix styles for checkbox and switch components

* Merge main branch changes

* update ci

* update ci

* update ci

* update ci

* check pnpm installation

* check pnpm installation

* update ci

* fix lint issues

* update yml file

--- a/apps/demo/src/App.scss
+++ b/apps/demo/src/App.scss
@@ -157,6 +157,21 @@
     }
   }
 
+  &__tags,
+  &__indicators {
+    display: flex;
+    gap: 1rem;
+  }
+  &__indicators {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    &--content {
+      display: flex;
+      gap: 1rem;
+      margin-top: 1rem;
+    }
+  }
+
   &__button-sizes {
     display: flex;
     gap: 1rem;
@@ -212,7 +227,7 @@
     &--title {
       margin: 2rem 0;
     }
-    
+
     &--item {
       display: flex;
       flex-direction: column;
