--- a/packages/core/src/components/input/styles.scss
+++ b/packages/core/src/components/input/styles.scss
@@ -41,12 +41,12 @@
 
   &--error {
     .mining-sdk-input {
-      border-color: var(--mining-sdk-color-error, #ef4444);
+      border-color: rgb(var(--mining-sdk-color-error, #ef4444));
     }
 
     .mining-sdk-input:hover:not(:disabled):not(:focus),
     .mining-sdk-input:focus {
-      border-color: var(--mining-sdk-color-error, #ef4444);
+      border-color: rgb(var(--mining-sdk-color-error, #ef4444));
     }
   }
 }
@@ -54,7 +54,7 @@
 .mining-sdk-input__error {
   font-size: var(--mining-sdk-font-size, 14px);
   line-height: var(--mining-sdk-line-height, 22px);
-  color: var(--mining-sdk-color-error, #ef4444);
+  color: rgb(var(--mining-sdk-color-error, #ef4444));
 }
 
 .mining-sdk-input__icon {
@@ -81,7 +81,9 @@
   border: 1px solid transparent;
   border-radius: 0;
   outline: none;
-  transition: border-color 0.2s, background-color 0.2s;
+  transition:
+    border-color 0.2s,
+    background-color 0.2s;
 
   &::placeholder {
     color: var(--mining-sdk-input-placeholder-color, #999999);
