--- a/packages/core/src/styles.scss
+++ b/packages/core/src/styles.scss
@@ -12,6 +12,10 @@
 @use './components/checkbox/styles' as checkbox;
 @use './components/date-picker/styles' as date-picker;
 @use './components/dialog/styles' as dialog;
+@use './components/empty-state/styles' as empty-state;
+@use './components/error-boundary/styles' as error-boundary;
+@use './components/error-card/styles' as error-card;
+@use './components/not-found-page/styles' as not-found-page;
 @use './components/tabs/styles' as tabs;
 @use './components/input/styles' as input;
 @use './components/label/styles' as label;
