(feature) SCSS Mixins Usage (#39)
* SCSS Mixins, Use Mixins on files

* SCSS Mixins, Change Config to Import Globally

* SCSS Mixins, Change Config for each file

--- a/packages/core/src/components/avatar/styles.scss
+++ b/packages/core/src/components/avatar/styles.scss
@@ -18,11 +18,10 @@
   }
 
   &__fallback {
-    display: flex;
+    @include flex_center;
+
     height: 100%;
     width: 100%;
-    align-items: center;
-    justify-content: center;
     border-radius: 9999px;
     background: hsl(var(--muted));
   }
