--- a/apps/demo/src/App.scss
+++ b/apps/demo/src/App.scss
@@ -14,8 +14,8 @@
   }
 
   &__content {
-    display: flex;
-    flex-direction: column;
+    @include flex_column;
+
     gap: 3rem;
   }
 }
@@ -39,9 +39,9 @@
   }
 
   &__buttons {
-    display: flex;
+    @include flex_wrap;
+
     gap: 1rem;
-    flex-wrap: wrap;
   }
 
   &__button-grid,
@@ -67,8 +67,8 @@
     }
 
     section {
-      display: flex;
-      flex-direction: column;
+      @include flex_column;
+
       gap: 0.75rem;
 
       h3 {
@@ -92,14 +92,14 @@
   }
 
   &__icons-grid {
-    display: flex;
+    @include flex_wrap;
+
     gap: 1rem;
-    flex-wrap: wrap;
   }
 
   &__date-pickers {
-    display: flex;
-    flex-direction: column;
+    @include flex_column;
+
     gap: 2rem;
 
     section {
@@ -117,15 +117,15 @@
 
   &__switches,
   &__checkboxes {
-    display: flex;
+    @include flex_column;
+
     gap: 1rem;
-    flex-direction: column;
     flex-wrap: wrap;
     margin-top: 2rem;
 
     &__item {
-      display: flex;
-      align-items: center;
+      @include flex_align;
+
       gap: 0.75rem;
     }
   }
@@ -136,19 +136,20 @@
     background-color: var(--mining-sdk-color-background-dark);
 
     &--column {
-      display: flex;
-      flex-direction: column;
+      @include flex_column;
+
       gap: 1rem;
     }
   }
   &__radio {
-    display: flex;
+    @include flex_between;
+
     gap: 1rem;
     margin-top: 2rem;
-    justify-content: space-between;
+
     &--item {
-      display: flex;
-      align-items: center;
+      @include flex_align;
+
       gap: 0.75rem;
     }
 
@@ -162,9 +163,11 @@
     display: flex;
     gap: 1rem;
   }
+
   &__indicators {
     flex-wrap: wrap;
     justify-content: space-between;
+
     &--content {
       display: flex;
       gap: 1rem;
@@ -179,15 +182,15 @@
   }
 
   &__form-controls {
-    display: flex;
-    flex-direction: column;
+    @include flex_column;
+    
     gap: 1rem;
     margin-top: 2rem;
   }
 
   &__form-item {
-    display: flex;
-    align-items: center;
+    @include flex_align;
+
     gap: 3rem;
     flex-wrap: wrap;
 
@@ -220,17 +223,17 @@
   }
 
   &__typography {
-    display: flex;
+    @include flex_between;
+    
     flex-wrap: wrap;
-    justify-content: space-between;
 
     &--title {
       margin: 2rem 0;
     }
 
     &--item {
-      display: flex;
-      flex-direction: column;
+      @include flex_column;
+      
       gap: 1rem;
     }
   }
@@ -241,8 +244,8 @@
 
   &__tooltip,
   &__popover {
-    display: flex;
-    flex-direction: column;
+    @include flex_column;
+    
     gap: 2rem;
 
     section {
@@ -265,14 +268,14 @@
   }
 
   &__toast-positions {
-    display: flex;
-    flex-wrap: wrap;
+    @include flex_wrap;
+
     gap: 0.5rem;
   }
 
   &__toast-buttons {
-    display: flex;
-    flex-wrap: wrap;
+    @include flex_wrap;
+    
     gap: 0.75rem;
   }
 
