--- a/packages/core/src/components/button/styles.scss
+++ b/packages/core/src/components/button/styles.scss
@@ -3,8 +3,8 @@
  */
 
 .mining-sdk-button {
-  display: inline-flex;
-  align-items: center;
+  @include inline_flex_align;
+  
   justify-content: center;
   border-radius: var(--mining-sdk-radius);
   font-size: var(--mining-sdk-font-size);
@@ -147,13 +147,11 @@
 }
 
 .mining-sdk-button__icon {
-  display: inline-flex;
-  align-items: center;
+  @include inline_flex_align;
 }
 
 .mining-sdk-button__label {
-  display: inline-flex;
-  align-items: center;
+  @include inline_flex_align;
 }
 
 @keyframes mining-sdk-button-spin {
