--- a/packages/core/src/components/error-card/styles.scss
+++ b/packages/core/src/components/error-card/styles.scss
@@ -1,15 +1,15 @@
 .mining-sdk-error-card {
   &--card {
-    border: 1px solid var(--mining-sdk-color-brick-red);
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
+    @include flex_column;
+
     gap: 10px;
+    padding: 10px;
+    border: 1px solid var(--mining-sdk-color-brick-red);
   }
 
   &--inline {
-    display: flex;
-    flex-direction: column;
+    @include flex_column;
+    
     gap: 4px;
   }
 
