--- a/packages/core/src/components/not-found-page/styles.scss
+++ b/packages/core/src/components/not-found-page/styles.scss
@@ -1,8 +1,6 @@
 .mining-sdk-not-found-page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  @include flex_column_center;
+  
   min-height: 100vh;
   background: var(--mining-sdk-color-surface);
   padding: 24px;
