--- a/packages/core/src/components/popover/styles.scss
+++ b/packages/core/src/components/popover/styles.scss
@@ -70,13 +70,13 @@
 
 /* Close button */
 .mining-sdk-popover__close {
+  @include inline_flex_align;
+  
   position: absolute;
   top: 12px;
   right: 12px;
   width: 24px;
   height: 24px;
-  display: inline-flex;
-  align-items: center;
   justify-content: center;
   border-radius: 4px;
   background: transparent;
