--- a/packages/core/src/components/radio/styles.scss
+++ b/packages/core/src/components/radio/styles.scss
@@ -4,9 +4,9 @@
 
 /* Base Radio */
 .mining-sdk-radio {
+  @include inline_flex_align;
+
   all: unset;
-  display: inline-flex;
-  align-items: center;
   justify-content: center;
   border: 2px solid var(--mining-sdk-color-background-light);
   background-color: transparent;
@@ -37,9 +37,8 @@
 
 /* Indicator (Inner dot) */
 .mining-sdk-radio__indicator {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex_center;
+  
   width: 100%;
   height: 100%;
   position: relative;
@@ -200,10 +199,10 @@
 
 /* Base RadioCard */
 .mining-sdk-radio-card {
+  @include inline_flex_align;
+
   all: unset;
   text-align: center;
-  display: inline-flex;
-  align-items: center;
   justify-content: center;
   font-family: 'JetBrains Mono', monospace;
   font-weight: 500;
