--- a/packages/core/src/styles/_colors.scss
+++ b/packages/core/src/styles/_colors.scss
@@ -38,9 +38,9 @@
     --mining-sdk-color-soft-amber: 254, 243, 199; /* #fef3c7 in Hex */
 
     /* Backgrounds */
+    --mining-sdk-color-surface: #0e0e0e;
     --mining-sdk-color-background-dark: #17130f;
     --mining-sdk-color-background-light: #e5e7eb;
-    --mining-sdk-color-surface: #0e0e0e;
 
     /* Common Component Colors */
     --mining-sdk-color-white: #ffffff;
@@ -66,6 +66,7 @@
     --mining-sdk-color-gray-500: #777777;
     --mining-sdk-color-gray-400: #8e8e8e;
     --mining-sdk-color-gray-300: #e1e0e0;
+    --mining-sdk-color-gray-stone: #898887;
 
     /* White overlays */
     --mining-sdk-color-white-12: #ffffff1f;
@@ -132,6 +133,16 @@
     --mining-sdk-button-danger-bg: #ef4444;
     --mining-sdk-button-danger-text: #ffffff;
     --mining-sdk-button-danger-border: #ef4444;
+
+    /* Sidebar specific colors */
+    --mining-sdk-sidebar-bg: var(--mining-sdk-color-surface);
+    --mining-sdk-sidebar-item-hover-bg: rgba(255, 255, 255, 0.05);
+    --mining-sdk-sidebar-overlay-bg: var(--mining-sdk-color-surface);
+    --mining-sdk-sidebar-border-color: var(--mining-sdk-color-primary);
+    --mining-sdk-sidebar-item-color: var(--mining-sdk-color-gray-stone);
+    --mining-sdk-sidebar-overlay-border: var(--mining-sdk-color-primary);
+    --mining-sdk-sidebar-item-active-color: var(--mining-sdk-color-primary);
+    --mining-sdk-sidebar-toggle-bg: var(--mining-sdk-color-background-dark);
   }
 
   .dark {
