--- a/packages/core/src/styles/index.scss
+++ b/packages/core/src/styles/index.scss
@@ -33,5 +33,6 @@
 @import '../components/dropdown-menu/styles';
 @import '../components/toast/styles';
 @import '../components/pagination/styles';
+@import '../components/sidebar/styles';
 @import '../components/spinner/styles';
 @import '../components/loader/styles';
