--- a/packages/core/src/styles/_base.scss
+++ b/packages/core/src/styles/_base.scss
@@ -4,8 +4,8 @@
   }
 
   body {
-    background: hsl(var(--background));
     color: hsl(var(--foreground));
     font-family: 'JetBrains Mono', sans-serif;
+    background: var(--mining-sdk-color-surface);
   }
 }
