--- a/packages/core/src/styles/_mixins.scss
+++ b/packages/core/src/styles/_mixins.scss
@@ -164,6 +164,12 @@
   align-items: flex-start;
 }
 
+@mixin flex_row_align_start {
+  @include flex_row;
+
+  align-items: flex-start;
+}
+
 @mixin flex_column_justify_center {
   @include flex_column;
 
