--- a/packages/core/src/styles/index.scss
+++ b/packages/core/src/styles/index.scss
@@ -33,6 +33,7 @@
 @import '../components/textarea/styles';
 @import '../components/indicator/styles';
 @import '../components/select/styles';
+@import '../components/skeleton/styles';
 @import '../components/dropdown-menu/styles';
 @import '../components/toast/styles';
 @import '../components/pagination/styles';
