Feature/extract chart wrapper component (#60)
* (feature) extract chart wrapper(old container) component

* added chart wrapper example

* add chart wrapper page

* update js doc and chart wrapper page

* add option to pass custom loader to chart wrapper component

--- a/packages/foundation/src/styles/index.scss
+++ b/packages/foundation/src/styles/index.scss
@@ -4,3 +4,4 @@
 @forward '../components/domain/active-incidents-card/styles';
 @forward '../components/domain/pool-details-card/styles';
 @forward '../components/domain/pool-details-popover/styles';
+@forward '../components/domain/chart-wrapper/styles';
