--- a/packages/core/src/components/radio/styles.scss
+++ b/packages/core/src/components/radio/styles.scss
@@ -38,7 +38,7 @@
 /* Indicator (Inner dot) */
 .mining-sdk-radio__indicator {
   @include flex_center;
-  
+
   width: 100%;
   height: 100%;
   position: relative;
@@ -121,12 +121,12 @@
    COLOR VARIANTS
    ======================================== */
 
-/* Default (Gray/Neutral) */
+/* Default */
 .mining-sdk-radio--default {
-  color: var(--mining-sdk-color-surface);
+  color: var(--mining-sdk-color-gray-400);
 }
 
-/* Primary (Orange) */
+/* Primary  */
 .mining-sdk-radio--primary {
   color: var(--mining-sdk-color-primary);
 
@@ -135,7 +135,7 @@
   }
 }
 
-/* Success (Green) */
+/* Success */
 .mining-sdk-radio--success {
   color: rgb(var(--mining-sdk-color-success));
 
@@ -144,7 +144,7 @@
   }
 }
 
-/* Warning (Yellow) */
+/* Warning  */
 .mining-sdk-radio--warning {
   color: var(--mining-sdk-color-warning);
 
@@ -153,7 +153,7 @@
   }
 }
 
-/* Error/Danger (Red) */
+/* Error/Danger  */
 .mining-sdk-radio--error {
   color: rgb(var(--mining-sdk-color-error));
 
